<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="in.aayushgoyal.popcorntimes.ui.home.HomeFragment"
        android:label="@string/title_home_fragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="in.aayushgoyal.popcorntimes.ui.search.SearchFragment"
        android:label="@string/title_search_fragment"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="in.aayushgoyal.popcorntimes.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites_fragment"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="in.aayushgoyal.popcorntimes.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
